Fix scene performer search field z-index

--- a/frontend/src/pages/scenes/sceneForm/styles.scss
+++ b/frontend/src/pages/scenes/sceneForm/styles.scss
@@ -36,6 +36,7 @@
     flex-grow: 1;
     max-width: 400px;
     width: auto;
+    position: relative;
   }
 
   .add-performer {
